force-app/main/default/objects/Audit__c/Audit__c.object-meta.xml
<CustomObject>
    <description>Holds Setup Audit Trail information</description>
    <label>Audit</label>
    <nameField>
        <displayFormat>AU-{0000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>