force-app/main/default/objects/Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action</description>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>