force-app/main/default/objects/Audit__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Audit Date</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>