force-app/main/default/objects/Audit__c/fields/Delegate_User__c.field-meta.xml
<CustomField>
    <fullName>Delegate_User__c</fullName>
    <description>Delegate User</description>
    <label>Delegate User</label>
    <type>Email</type>
</CustomField>