force-app/main/default/objects/Audit__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Section</description>
    <label>Section</label>
    <length>120</length>
    <type>Text</type>
</CustomField>