force-app/main/default/objects/Audit__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User Email</description>
    <label>User</label>
    <type>Email</type>
</CustomField>