force-app/main/default/objects/Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>User__c</columns>
    <columns>Action__c</columns>
    <columns>Section__c</columns>
    <columns>Delegate_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>